# geektasks

./: .env.example  Dockerfile  docker-compose.yaml  entrypoint.sh  manage.py  pyproject.toml
geeksTaks/: asgi.py  settings.py  urls.py  wsgi.py
main/: models.py  serializers.py  urls.py  views.py
main/migrations/: 0001_initial.py
